<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="@color/white"
    android:id="@+id/student_card">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:foreground="?android:attr/selectableItemBackground">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageStudent"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_person"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_centerVertical="true"
            app:shapeAppearanceOverlay="@style/RoundedImageView"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/imageStudent"
            android:layout_alignTop="@+id/imageStudent">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:maxLines="3"
                android:justificationMode="inter_word"/>

            <TextView
                android:id="@+id/nameBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/name_body"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:maxLines="3"
                android:justificationMode="inter_word"/>

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:maxLines="5"
                android:justificationMode="inter_word"/>

            <TextView
                android:id="@+id/addressBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/address_body"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:maxLines="5"
                android:justificationMode="inter_word"/>


        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>